[project]
name = "ai-trading-system"
version = "0.1.0"
description = "AI Algorithmic Trading Platform — backend (Zerodha Kite Connect)"
requires-python = ">=3.11"

# Code is run from the repo root with PYTHONPATH=. (see Dockerfile / README);
# top-level packages (engine, api, risk, ...) mirror the build spec layout.

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
# Unit tests cover the pure logic (indicators, OI buildup, regime, backtest metrics);
# they need no DB/broker. Run from the repo root: PYTHONPATH=. pytest
